include/grx-3.0.h

typedef struct _GrxContext      GrxContext;
/* ================================================================== */
/*                        SYSTEM TYPE DEF's                           */
/* ================================================================== */

/* need unsigned 32 bit integer for color stuff */
typedef guint32 GrxColor;
/*
 * color table (for primitives using several colors):
 *   it is an array of colors with the first element being
 *   the number of colors in the table
 */
typedef GrxColor *GrColorTableP;
typedef struct {                        /* framed box colors */
        GrxColor fbx_intcolor;
        GrxColor fbx_topcolor;
        GrxColor fbx_rightcolor;
        GrxColor fbx_bottomcolor;
        GrxColor fbx_leftcolor;
} GrFBoxColors;
typedef struct _GR_textOption {         /* text drawing option structure */
        struct _GR_font     *txo_font;      /* font to be used */
        union  _GR_textColor txo_fgcolor;   /* foreground color */
        union  _GR_textColor txo_bgcolor;   /* background color */
        char    txo_chrtype;                /* character type (see above) */
        char    txo_direct;                 /* direction (see above) */
        char    txo_xalign;                 /* X alignment (see above) */
        char    txo_yalign;                 /* Y alignment (see above) */
} GrTextOption;
/* ================================================================== */
/*            THICK AND DASHED LINE DRAWING PRIMITIVES                */
/* ================================================================== */

/*
 * custom line option structure
 *   zero or one dash pattern length means the line is continuous
 *   the dash pattern always begins with a drawn section
 */
typedef struct {
        GrxColor lno_color;                  /* color used to draw line */
        int     lno_width;                  /* width of the line */
        int     lno_pattlen;                /* length of the dash pattern */
        unsigned char *lno_dashpat;         /* draw/nodraw pattern */
} GrLineOption;
/*
 * Fill pattern union -- can either be a bitmap or a pixmap
 */
typedef union _GR_pattern {
        int      gp_ispixmap;               /* nonzero for pixmaps */
        GrBitmap gp_bitmap;                 /* fill bitmap */
        GrPixmap gp_pixmap;                 /* fill pixmap */
} GrPattern;
/*
 * Draw pattern for line drawings -- specifies both the:
 *   (1) fill pattern, and the
 *   (2) custom line drawing option
 */
typedef struct {
        GrPattern     *lnp_pattern;         /* fill pattern */
        GrLineOption  *lnp_option;          /* width + dash pattern */
} GrLinePattern;
void     GrImageDisplay(int x,int y, GrImage *i);
void     GrImageDisplayExt(int x1,int y1,int x2,int y2, GrImage *i);
void     GrImageFilledBoxAlign(int xo,int yo,int x1,int y1,int x2,int y2,GrImage *p);
void     GrImageHLineAlign(int xo,int yo,int x,int y,int width,GrImage *p);
void     GrImagePlotAlign(int xo,int yo,int x,int y,GrImage *p);
GrImage *GrImageInverse(GrImage *p,int flag);
GrImage *GrImageStretch(GrImage *p,int nwidth,int nheight);
GrImage *GrImageFromPattern(GrPattern *p);
GrImage *GrImageFromContext(GrxContext *c);
GrPattern *GrPatternFromImage(GrImage *p);
#define GrImageFromPattern(p) \
        (((p) && (p)->gp_ispixmap) ? (&(p)->gp_pixmap) : NULL)
#define GrImageFromContext(c) \
        (GrImage *)GrConvertToPixmap(c)
#define GrPatternFromImage(p) \
        (GrPattern *)(p)
/* ================================================================== */
/*               DRAWING IN USER WINDOW COORDINATES                   */
/* ================================================================== */

void GrSetUserWindow(int x1,int y1,int x2,int y2);
void GrGetUserWindow(int *x1,int *y1,int *x2,int *y2);
void GrGetScreenCoord(int *x,int *y);
void GrGetUserCoord(int *x,int *y);
void GrUsrPlot(int x,int y,GrxColor c);
void GrUsrLine(int x1,int y1,int x2,int y2,GrxColor c);
void GrUsrHLine(int x1,int x2,int y,GrxColor c);
void GrUsrVLine(int x,int y1,int y2,GrxColor c);
void GrUsrBox(int x1,int y1,int x2,int y2,GrxColor c);
void GrUsrFilledBox(int x1,int y1,int x2,int y2,GrxColor c);
void GrUsrFramedBox(int x1,int y1,int x2,int y2,int wdt,GrFBoxColors *c);
void GrUsrCircle(int xc,int yc,int r,GrxColor c);
void GrUsrEllipse(int xc,int yc,int xa,int ya,GrxColor c);
void GrUsrCircleArc(int xc,int yc,int r,int start,int end,int style,GrxColor c);
void GrUsrEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,GrxColor c);
void GrUsrFilledCircle(int xc,int yc,int r,GrxColor c);
void GrUsrFilledEllipse(int xc,int yc,int xa,int ya,GrxColor c);
void GrUsrFilledCircleArc(int xc,int yc,int r,int start,int end,int style,GrxColor c);
void GrUsrFilledEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,GrxColor c);
void GrUsrPolyLine(int numpts,int points[][2],GrxColor c);
void GrUsrPolygon(int numpts,int points[][2],GrxColor c);
void GrUsrFilledConvexPolygon(int numpts,int points[][2],GrxColor c);
void GrUsrFilledPolygon(int numpts,int points[][2],GrxColor c);
void GrUsrFloodFill(int x, int y, GrxColor border, GrxColor c);
GrxColor GrUsrPixel(int x,int y);
void GrUsrCustomLine(int x1,int y1,int x2,int y2,const GrLineOption *o);
void GrUsrCustomBox(int x1,int y1,int x2,int y2,const GrLineOption *o);
void GrUsrCustomCircle(int xc,int yc,int r,const GrLineOption *o);
void GrUsrCustomEllipse(int xc,int yc,int xa,int ya,const GrLineOption *o);
void GrUsrCustomCircleArc(int xc,int yc,int r,int start,int end,int style,const GrLineOption *o);
void GrUsrCustomEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,const GrLineOption *o);
void GrUsrCustomPolyLine(int numpts,int points[][2],const GrLineOption *o);
void GrUsrCustomPolygon(int numpts,int points[][2],const GrLineOption *o);
void GrUsrPatternedLine(int x1,int y1,int x2,int y2,GrLinePattern *lp);
void GrUsrPatternedBox(int x1,int y1,int x2,int y2,GrLinePattern *lp);
void GrUsrPatternedCircle(int xc,int yc,int r,GrLinePattern *lp);
void GrUsrPatternedEllipse(int xc,int yc,int xa,int ya,GrLinePattern *lp);
void GrUsrPatternedCircleArc(int xc,int yc,int r,int start,int end,int style,GrLinePattern *lp);
void GrUsrPatternedEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,GrLinePattern *lp);
void GrUsrPatternedPolyLine(int numpts,int points[][2],GrLinePattern *lp);
void GrUsrPatternedPolygon(int numpts,int points[][2],GrLinePattern *lp);
void GrUsrPatternFilledPlot(int x,int y,GrPattern *p);
void GrUsrPatternFilledLine(int x1,int y1,int x2,int y2,GrPattern *p);
void GrUsrPatternFilledBox(int x1,int y1,int x2,int y2,GrPattern *p);
void GrUsrPatternFilledCircle(int xc,int yc,int r,GrPattern *p);
void GrUsrPatternFilledEllipse(int xc,int yc,int xa,int ya,GrPattern *p);
void GrUsrPatternFilledCircleArc(int xc,int yc,int r,int start,int end,int style,GrPattern *p);
void GrUsrPatternFilledEllipseArc(int xc,int yc,int xa,int ya,int start,int end,int style,GrPattern *p);
void GrUsrPatternFilledConvexPolygon(int numpts,int points[][2],GrPattern *p);
void GrUsrPatternFilledPolygon(int numpts,int points[][2],GrPattern *p);
void GrUsrPatternFloodFill(int x, int y, GrxColor border, GrPattern *p);
void GrUsrDrawChar(int chr,int x,int y,const GrTextOption *opt);
void GrUsrDrawString(char *text,int length,int x,int y,const GrTextOption *opt);
void GrUsrTextXY(int x,int y,char *text,GrxColor fg,GrxColor bg);
/* ================================================================== */
/*                    GRAPHICS CURSOR UTILITIES                       */
/* ================================================================== */

typedef struct _GR_cursor {
        GrxContext work;                            /* work areas (4) */
        int     xcord,ycord;                        /* cursor position on screen */
        int     xsize,ysize;                        /* cursor size */
        int     xoffs,yoffs;                        /* LU corner to hot point offset */
        int     xwork,ywork;                        /* save/work area sizes */
        int     xwpos,ywpos;                        /* save/work area position on screen */
        int     displayed;                          /* set if displayed */
} GrCursor;
GrCursor *GrBuildCursor(char *pixels,int pitch,int w,int h,int xo,int yo,const GrColorTableP c);
void GrDestroyCursor(GrCursor *cursor);
void GrDisplayCursor(GrCursor *cursor);
void GrEraseCursor(GrCursor *cursor);
void GrMoveCursor(GrCursor *cursor,int x,int y);
/* ================================================================== */
/*                           PNM FUNCTIONS                            */
/* ================================================================== */

/*
 *  The PNM formats, grx support load/save of
 *  binaries formats (4,5,6) only
 */

#define PLAINPBMFORMAT 1
#define PLAINPGMFORMAT 2
#define PLAINPPMFORMAT 3
#define PBMFORMAT      4
#define PGMFORMAT      5
#define PPMFORMAT      6
int GrQueryPnm( char *pnmfn, int *width, int *height, int *maxval );
int GrQueryPnmBuffer( const char *buffer, int *width, int *height, int *maxval );
/* ================================================================== */
/*                           PNG FUNCTIONS                            */
/*  these functions may not be installed or available on all system   */
/* ================================================================== */

int GrPngSupport( void );
int GrQueryPng( char *pngfn, int *width, int *height );