bindings/vala/grx-3.0.vapi


        [CCode (cname = "GrImageDisplay", instance_pos = 2.1)]
        public void display (int x, int y);
        [CCode (cname = "GrImageDisplayExt", instance_pos = 4.1)]
        public void display_ext (int x1, int y1, int x2, int y2);
        [CCode (cname = "GrImageFilledBoxAlign", instance_pos = 6.1)]
        public void filled_box_align (int xo, int yo, int x1, int y1, int x2, int y2);
        [CCode (cname = "GrImageHLineAlign", instance_pos = 6.1)]
        public void HLineAlign (int xo, int yo, int x, int y, int width);
        [CCode (cname = "GrImagePlotAlign", instance_pos = 4.1)]
        public void PlotAlign (int xo, int yo, int x, int y);

        [CCode (cname = "GrImageInverse")]
        public Image inverse (ImageInverseFlag flag);
        [CCode (cname = "GrImageStretch")]
        public Image stretch (int width, int height);

        [CCode (cname = "GrImageFromPattern")]
        public static Image from_pattern (Pattern pattern);
        [CCode (cname = "GrImageFromContext")]
        public static Image from_context (Context context);

        [CCode (cname = "GrPatternFromImage")]
        public Pattern to_pattern ();
    }

    /* ================================================================== */
    /*               DRAWING IN USER WINDOW COORDINATES                   */
    /* ================================================================== */

    [CCode (cname = "GrSetUserWindow")]
    public void set_user_window (int x1, int y1, int x2, int y2);
    [CCode (cname = "GrGetUserWindow")]
    public void get_user_window (out int x1, out int y1, out int x2, out int y2);
    [CCode (cname = "GrGetScreenCoord")]
    public void get_screen_coord (out int x, out int y);
    [CCode (cname = "GrGetUserCoord")]
    public void get_user_coord (out int x, out int y);

    [CCode (cname = "GrUsrPlot")]
    public void user_plot (int x, int y, Color c);
    [CCode (cname = "GrUsrLine")]
    public void user_line (int x1, int y1, int x2, int y2, Color c);
    [CCode (cname = "GrUsrHLine")]
    public void user_horiz_line (int x1, int x2, int y, Color c);
    [CCode (cname = "GrUsrVLine")]
    public void user_vert_line (int x, int y1, int y2, Color c);
    [CCode (cname = "GrUsrBox")]
    public void user_box (int x1, int y1, int x2, int y2, Color c);
    [CCode (cname = "GrUsrFilledBox")]
    public void user_filled_box (int x1, int y1, int x2, int y2, Color c);
    [CCode (cname = "GrUsrFramedBox")]
    public void user_framed_box (int x1, int y1, int x2, int y2, int wdt, FramedBoxColors c);
    [CCode (cname = "GrUsrCircle")]
    public void user_circle (int xc, int yc, int r, Color c);
    [CCode (cname = "GrUsrEllipse")]
    public void user_ellipse (int xc, int yc, int xa, int ya, Color c);
    [CCode (cname = "GrUsrCircleArc")]
    public void user_circle_arc (int xc, int yc, int r, int start, int end, ArcStyle style, Color c);
    [CCode (cname = "GrUsrEllipseArc")]
    public void user_ellipse_arc (int xc, int yc, int xa, int ya, int start, int end, ArcStyle style, Color c);
    [CCode (cname = "GrUsrFilledCircle")]
    public void user_filled_circle (int xc, int yc, int r, Color c);
    [CCode (cname = "GrUsrFilledEllipse")]
    public void user_filled_ellipse (int xc, int yc, int xa, int ya, Color c);
    [CCode (cname = "GrUsrFilledCircleArc")]
    public void user_filled_circle_arc (int xc, int yc, int r, int start, int end, ArcStyle style, Color c);
    [CCode (cname = "GrUsrFilledEllipseArc")]
    public void user_filled_ellipse_arc (int xc, int yc, int xa, int ya, int start, int end, ArcStyle style, Color c);
    [CCode (cname = "GrUsrPolyLine")]
    public void useR_poly_line ([CCode (array_length_pos = 0.9)]Point[] points, Color c);
    [CCode (cname = "GrUsrPolygon")]
    public void user_polygon ([CCode (array_length_pos = 0.9)]Point[] points, Color c);
    [CCode (cname = "GrUsrFilledConvexPolygon")]
    public void user_filled_convex_polygon ([CCode (array_length_pos = 0.9)]Point[] points, Color c);
    [CCode (cname = "GrUsrFilledPolygon")]
    public void user_filled_polygon ([CCode (array_length_pos = 0.9)]Point[] points, Color c);
    [CCode (cname = "GrUsrFloodFill")]
    public void user_flood_fill (int x, int y, Color border, Color c);

    [CCode (cname = "GrUsrPixel")]
    public Color user_pixel (int x, int y);

    [CCode (cname = "GrUsrCustomLine")]
    public void user_custom_line (int x1, int y1, int x2, int y2, LineOption option);
    [CCode (cname = "GrUsrCustomBox")]
    public void user_custom_box (int x1, int y1, int x2, int y2, LineOption option);
    [CCode (cname = "GrUsrCustomCircle")]
    public void user_custom_circle (int xc, int yc, int r, LineOption option);
    [CCode (cname = "GrUsrCustomEllipse")]
    public void user_custom_ellipse (int xc, int yc, int xa, int ya, LineOption option);
    [CCode (cname = "GrUsrCustomCircleArc")]
    public void user_custom_circle_arc (int xc, int yc, int r, int start, int end, ArcStyle style, LineOption option);
    [CCode (cname = "GrUsrCustomEllipseArc")]
    public void user_custom_ellipse_arc (int xc, int yc, int xa, int ya, int start, int end, ArcStyle style, LineOption option);
    [CCode (cname = "GrUsrCustomPolyLine")]
    public void user_custom_poly_line ([CCode (array_length_pos = 0.9)]Point[] points, LineOption option);
    [CCode (cname = "GrUsrCustomPolygon")]
    public void user_custom_polygon ([CCode (array_length_pos = 0.9)]Point[] points, LineOption option);

    [CCode (cname = "GrUsrPatternedLine")]
    public void user_patterned_line (int x1, int y1, int x2, int y2, LinePattern pattern);
    [CCode (cname = "GrUsrPatternedBox")]
    public void user_patterned_box (int x1, int y1, int x2, int y2, LinePattern pattern);
    [CCode (cname = "GrUsrPatternedCircle")]
    public void user_patterned_circle (int xc, int yc, int r, LinePattern pattern);
    [CCode (cname = "GrUsrPatternedEllipse")]
    public void user_patterned_ellipse (int xc, int yc, int xa, int ya, LinePattern pattern);
    [CCode (cname = "GrUsrPatternedCircleArc")]
    public void user_patterned_circle_arc (int xc, int yc, int r, int start, int end, ArcStyle style, LinePattern pattern);
    [CCode (cname = "GrUsrPatternedEllipseArc")]
    public void user_patterned_ellipse_arc (int xc, int yc, int xa, int ya, int start, int end, ArcStyle style, LinePattern pattern);
    [CCode (cname = "GrUsrPatternedPolyLine")]
    public void user_patterned_poly_line ([CCode (array_length_pos = 0.9)]Point[] points, LinePattern pattern);
    [CCode (cname = "GrUsrPatternedPolygon")]
    public void user_patterned_polygon ([CCode (array_length_pos = 0.9)]Point[] points, LinePattern pattern);

    [CCode (cname = "GrUsrPatternFilledPlot")]
    public void user_pattern_filled_plot (int x, int y, Pattern pattern);
    [CCode (cname = "GrUsrPatternFilledLine")]
    public void user_pattern_filled_line (int x1, int y1, int x2, int y2, Pattern pattern);
    [CCode (cname = "GrUsrPatternFilledBox")]
    public void user_pattern_filled_box (int x1, int y1, int x2, int y2, Pattern pattern);
    [CCode (cname = "GrUsrPatternFilledCircle")]
    public void user_pattern_filled_circle (int xc, int yc, int r, Pattern pattern);
    [CCode (cname = "GrUsrPatternFilledEllipse")]
    public void user_pattern_filled_ellipse (int xc, int yc, int xa, int ya, Pattern pattern);
    [CCode (cname = "GrUsrPatternFilledCircleArc")]
    public void user_pattern_filled_circle_arc (int xc, int yc, int r, int start, int end, int style, Pattern pattern);
    [CCode (cname = "GrUsrPatternFilledEllipseArc")]
    public void user_pattern_filled_ellipse_arc (int xc, int yc, int xa, int ya, int start, int end, int style, Pattern pattern);
    [CCode (cname = "GrUsrPatternFilledConvexPolygon")]
    public void user_pattern_filled_convex_polygon ([CCode (array_length_pos = 0.9)]Point[] points, Pattern pattern);
    [CCode (cname = "GrUsrPatternFilledPolygon")]
    public void user_pattern_filled_polygon ([CCode (array_length_pos = 0.9)]Point[] points, Pattern pattern);
    [CCode (cname = "GrUsrPatternFloodFill")]
    public void user_pattern_flood_fill (int x, int y, Color border, Pattern pattern);

    [CCode (cname = "GrUsrDrawChar")]
    public void user_draw_char (int chr, int x, int y, TextOption opt);
    [CCode (cname = "GrUsrDrawString")]
    public void user_draw_string (char *text, int length, int x, int y, TextOption opt);
    public void user_draw_vala_string (string text, int x, int y, TextOption opt) {
        user_draw_string (text.data, text.length, x, y, opt);
    }
    [CCode (cname = "GrUsrTextXY")]
    public void user_text_xy (int x, int y, string text, Color fg, Color bg);

    /* ================================================================== */
    /*                    GRAPHICS CURSOR UTILITIES                       */
    /* ================================================================== */

    [CCode (cname = "struct _GR_cursor", free_function = "GrDestroyCursor", has_type_id = false)]
    [Compact]
    public class Cursor {

        [CCode (cname = "&self->work")]
        public static Context work;                    /* work areas (4) */
        public int xcord;                        /* cursor position on screen */
        public int ycord;
        public int xsize;                        /* cursor size */
        public int ysize;
        public int xoffs;                        /* LU corner to hot point offset */
        public int yoffs;
        public int xwork;                        /* save/work area sizes */
        public int ywork;
        public int xwpos;                        /* save/work area position on screen */
        public int ywpos;
        public int displayed;                          /* set if displayed */

        [CCode (cname = "GrBuildCursor")]
        public Cursor ([CCode (array_length = false)]char[] pixels, int pitch, int w, int h, int xo, int yo, ColorTable table);

        [CCode (cname = "GrDisplayCursor")]
        public void display ();
        [CCode (cname = "GrEraseCursor")]
        public void erase ();
        [CCode (cname = "GrMoveCursor")]
        public void move (int x, int y);
    }

    /* ================================================================== */
    /*                           PNM FUNCTIONS                            */
    /* ================================================================== */

    /**
     *  The PNM formats, grx support load/save of
     *  binaries formats (4, 5, 6) only
     */
    [CCode (cname = "int", has_type_id = false)]
    public enum PNMFormat {
        [CCode (cname = "PLAINPBMFORMAT")]
        PLAIN_PBM,
        [CCode (cname = "PLAINPGMFORMAT")]
        PLAIN_PGM,
        [CCode (cname = "PLAINPPMFORMAT")]
        PLAIN_PPM,
        [CCode (cname = "PBMFORMAT")]
        PBM,
        [CCode (cname = "PGMFORMAT")]
        PGM,
        [CCode (cname = "PPMFORMAT")]
        PPM
    }

    /* The PNM functions */

    [CCode (cname = "GrQueryPnm")]
    public Result query_pnm (string file_name, out int width, out int height, out int maxval);
    [CCode (cname = "GrQueryPnmBuffer")]
    public Result query_pnm_buffer (char *buffer, out int width, out int height, out int maxval);

    /* ================================================================== */
    /*                           PNG FUNCTIONS                            */
    /*  these functions may not be installed or available on all system   */
    /* ================================================================== */

    [CCode (cname = "GrPngSupport")]
    public bool png_support ();
    [CCode (cname = "GrQueryPng")]
    public Result query_png (string file_name, out int width, out int height);
